Correction to card background on devices that prefer dark mode.

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -13,6 +13,9 @@
 		padding: 1rem 2rem;
 		margin: 3rem auto 6rem;
 	}
+	@media (prefers-color-scheme: dark) {
+		background-color: rgba(0, 0, 60, 1);
+	}
 }
 .header {
 	display: flex;
